--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,10 @@ tasks.named('bootJar') {
 }
 
 dependencies {
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
 }
