--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,8 @@ tasks.named('bootJar') {
 
 dependencies {
     implementation project(':core')
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation("org.postgresql:postgresql:42.7.4")
