--- a/api/build.gradle
+++ b/api/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation("org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0")
     implementation("org.postgresql:postgresql:42.7.4")
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
 }
