--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,7 @@ tasks.named('bootJar') {
 
 dependencies {
     implementation project(':core')
+    implementation("org.liquibase:liquibase-core:4.30.0")
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
