--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,6 +5,8 @@ tasks.named('bootJar') {
 dependencies {
     implementation project(':core')
     implementation("org.liquibase:liquibase-core:4.30.0")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.1")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2")
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
