--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,7 +3,9 @@ tasks.named('bootJar') {
 }
 
 dependencies {
-    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.1")
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
