--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,5 +7,6 @@ dependencies {
 
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.1")
+    implementation("jakarta.validation:jakarta.validation-api:3.1.0")
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
